syntax = "proto3";
package project.v1;
option go_package = "github.com/igorrmotta/api-corestack/services/golang/gen/project/v1;projectv1";

import "common/v1/pagination.proto";
import "google/protobuf/timestamp.proto";

message Project {
  string id = 1;
  string workspace_id = 2;
  string name = 3;
  string description = 4;
  string status = 5; // active, archived
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateProjectRequest {
  string workspace_id = 1;
  string name = 2;
  string description = 3;
}

message CreateProjectResponse {
  Project project = 1;
}

message GetProjectRequest {
  string id = 1;
}

message GetProjectResponse {
  Project project = 1;
}

message ListProjectsRequest {
  string workspace_id = 1;
  common.v1.PaginationRequest pagination = 2;
}

message ListProjectsResponse {
  repeated Project projects = 1;
  common.v1.PaginationResponse pagination = 2;
}

message UpdateProjectRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string status = 4;
}

message UpdateProjectResponse {
  Project project = 1;
}

message DeleteProjectRequest {
  string id = 1;
}

message DeleteProjectResponse {}

service ProjectService {
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse);
  rpc GetProject(GetProjectRequest) returns (GetProjectResponse);
  rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse);
  rpc UpdateProject(UpdateProjectRequest) returns (UpdateProjectResponse);
  rpc DeleteProject(DeleteProjectRequest) returns (DeleteProjectResponse);
}
